# piccolo

./: .gitignore  README.md  cobalt_skyra.py  piccolo_clients.py  piccolo_instrument.py  piccolo_instrument_sim.py  piccolo_plotly_ui.py  piccolo_ui.py  requirements.txt
assets/: custom.css  style.css
config/: default.yaml  laser_config.json  piccolo_mmap.json
firmware/arm/: piccolo_rp.py
firmware/fpga/rtl/: red_pitaya_fads.sv
fpga/FADS.srcs/sources_1/imports/RedPitaya-FPGA-master/prj/v0.94/rtl/: red_pitaya_top.sv
fpga/rtl/: red_pitaya_fads.sv  red_pitaya_top_4ADC.sv
host/: pyproject.toml
host/src/piccolo/: __main__.py  config.py  conversion.py  piccolo_clients.py  piccolo_instrument.py  piccolo_instrument_sim.py  piccolo_ui.py
host/src/piccolo/controllers/: __init__.py  controller.py  hardware_controller.py  hardware_simulator.py
host/src/piccolo/drivers/: __init__.py  camera.py  laser.py
host/src/piccolo/ui/: app.py  callbacks.py  layout.py
host/src/piccolo/ui/assets/: custom.css
host/tests/: test_clients.py  test_config.py  test_conversion.py  test_hardware_simulator.py
redpitaya/: piccolo_mmap.json  piccolo_rp.py
