[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piccolo"
version = "0.1.0"
description = "Fluorescence-activated droplet sorting (FADS) instrument control system"
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0",
    "dash-bootstrap-components>=2.0",
    "plotly>=6.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "paramiko>=3.0",
    "scp>=0.15",
    "pyserial>=3.5",
]

[project.optional-dependencies]
camera = [
    "opencv-python>=4.0",
    # pypylon must be installed separately from Basler's SDK
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
piccolo = "piccolo.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
